<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="file_provider_authority" translatable="false">com.fibelatti.raffler.fileprovider</string>
    <string name="hint_ok">OK</string>
    <string name="hint_yes">Yes</string>
    <string name="hint_no">No</string>
    <string name="hint_done">Done</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_button_back">Navigate back</string>
    <string name="hint_got_it">GOT IT</string>
    <string name="hint_skip_tutorial">SKIP TUTORIAL</string>
    <string name="generic_msg_error">Oops! Something went wrong. Please try again.</string>
    <string name="main_action_search">Search</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_hint_placeholder">
        No groups yet :(
        \n\nIf you\'re ever in doubt of which option to choose, tap the button below to create groups and help you deciding randomly, from a single option to smaller groups.</string>
    <plurals name="main_hint_group_items_quantity">
        <item quantity="one">1 item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="main_section_title_quick_decisions">Quick decisions</string>
    <string name="main_section_title_my_groups">My groups</string>
    <string name="main_tutorial_intro">Welcome to &appname; It seems that you\'re new around here, so I\'ll explain how to get things going&#8230;</string>
    <string name="main_tutorial_quick_decision">These are the quick decision buttons: tap them and get an immediate result! Scroll horizontally for more options&#8230;</string>
    <string name="main_tutorial_add_group">The real fun begins when you create your first group. Whenever you think you\'re ready tap this button over here&#8230;</string>
    <string name="group_label_fab_roulette">Roulette</string>
    <string name="group_label_fab_list">Random Winners</string>
    <string name="group_label_fab_groups">Sub Groups</string>
    <string name="group_label_fab_voting">Secret Voting</string>
    <string name="group_label_fab_combination">Combination</string>
    <string name="group_action_share">Share</string>
    <string name="group_action_help">Help</string>
    <string name="group_action_check_all">Check All</string>
    <string name="group_action_uncheck_all">Uncheck All</string>
    <string name="group_action_edit">Edit</string>
    <string name="group_action_delete">Delete</string>
    <string name="group_msg_delete_scs">Group deleted!</string>
    <string name="group_msg_validate_selection">Select at least 2 options to raffle</string>
    <string name="group_dialog_title_delete">Deleting group</string>
    <string name="group_dialog_msg_delete">Are you sure you want to delete this group?</string>
    <string name="group_dialog_title_help">Help</string>
    <string name="group_dialog_msg_help">Do you need help deciding which option to choose?
        \n\nExplore all methods:
        \n\n<b>Roulette</b> will choose one random result with an animation.
        \n\n<b>Random Winners</b> will ask you how many options you want to choose from the raffle and display them right away.
        \n\n<b>Sub Groups</b> will form randomly arranged sub groups among your options.
        \n\n<b>Secret Voting</b> will host a voting so your friends can vote one by one to elect a winner.
        \n\n<b>Combination</b> will combine two groups to form pairs among them.
    </string>
    <string name="group_tutorial_check_items">Each raffle is different, choose which items to include in this round by toggling their checkboxes&#8230;</string>
    <string name="group_tutorial_menu">Use the menu for more options&#8230;</string>
    <string name="group_tutorial_play">When you\'re done selecting, click the play button to select the mode&#8230;</string>
    <string name="group_tutorial_help">Understand more about each mode by selecting the help icon&#8230;</string>
    <string name="group_form_title_new">New</string>
    <string name="group_form_title_edit">Edit</string>
    <string name="group_form_hint_name">Group name</string>
    <string name="group_form_hint_item_name">Item name</string>
    <string name="group_form_action_save">Save</string>
    <string name="group_form_action_include_range">Include Number Range</string>
    <string name="group_form_action_delete_items">Delete Selected Items</string>
    <string name="group_form_action_delete_all_items">Delete All Items</string>
    <string name="group_form_action_add">Add</string>
    <string name="group_form_msg_save">Group saved!</string>
    <string name="group_form_msg_validate_name">Group must have a name</string>
    <string name="group_form_msg_validate_item_name">Item must not be empty</string>
    <string name="group_form_msg_validate_items">Group must have at least 2 items</string>
    <string name="group_form_msg_delete_items">No items selected to delete!</string>
    <string name="group_form_msg_delete_all_items">No items to delete!</string>
    <string name="group_form_dialog_title_delete_items">Deleting group items</string>
    <string name="group_form_dialog_msg_delete_items">Are you sure you want to delete the selected items?</string>
    <string name="group_form_dialog_title_delete_all_items">Deleting group items</string>
    <string name="group_form_dialog_msg_delete_all_items">Are you sure you want to delete all items?</string>
    <string name="group_form_dialog_title_unsaved_changes">Unsaved changes</string>
    <string name="group_form_dialog_msg_unsaved_changes">You have unsaved changes, are you sure you want to go back?</string>
    <string name="group_form_dialog_title_include_number_range">Include number range</string>
    <string name="group_form_dialog_msg_include_number_range">Select a number range to create group items automatically</string>
    <string name="group_form_dialog_initial_number">Initial number</string>
    <string name="group_form_dialog_final_number">Final number</string>
    <string name="group_form_dialog_hint_include">Include</string>
    <string name="group_form_dialog_hint_done">Done</string>
    <string name="group_form_dialog_hint_cancel">Cancel</string>
    <string name="group_form_msg_validate_initial_number">Initial number must not be empty</string>
    <string name="group_form_msg_validate_final_number_empty">Final number must not be empty</string>
    <string name="group_form_msg_validate_final_number_greater">Final number must be greater than initial number</string>
    <string name="group_form_dialog_title_edit_item">Edit item</string>
    <string name="group_form_dialog_msg_edit_item">Select a new name for this item:</string>
    <string name="group_form_dialog_edit_item_new_name">New name</string>
    <string name="group_form_tutorial_group_name">Creating a group is easy: first you should choose the group name&#8230;</string>
    <string name="group_form_tutorial_item_name">Then you should type one item at a time in this field&#8230;</string>
    <string name="group_form_tutorial_add_item">And click this button to insert the item&#8230;</string>
    <string name="group_form_tutorial_edit">If you mistyped the item name, you can long press on the item to edit&#8230;</string>
    <string name="group_form_tutorial_toolbar">When you\'re done click on the &#x2713; icon to save your group! Explore the menu to see what else you can do&#8230;</string>
    <string name="roulette_title">Roulette!</string>
    <string name="roulette_msg_stopping">Stopping&#8230;</string>
    <string name="random_winners_title">Random Winners!</string>
    <string name="random_winners_hint_quantity">Quantity of winners</string>
    <string name="random_winners_action_raffle">Raffle</string>
    <string name="random_winners_msg_validate_quantity">Quantity should be less than %d</string>
    <string name="random_winners_msg_validate_quantity_empty">Quantity should not be empty</string>
    <string name="random_winners_msg_result">Winner #%d</string>
    <string name="subgroups_title">Sub Groups!</string>
    <string name="subgroups_hint_radio_group_title">Type</string>
    <string name="subgroups_hint_radio_subgroups">Sub Groups</string>
    <string name="subgroups_hint_radio_members">Elements per group</string>
    <string name="subgroups_hint_quantity">Quantity</string>
    <string name="subgroups_action_raffle">Raffle</string>
    <string name="subgroups_msg_validate_quantity_maximum">Quantity should be equal or less than %d</string>
    <string name="subgroups_msg_validate_quantity_minimum">Quantity should be equal or greater than %d</string>
    <string name="subgroups_msg_validate_quantity_empty">Quantity should not be empty</string>
    <string name="subgroups_msg_validate_quantity_zero">Quantity should not be zero</string>
    <string name="subgroups_hint_group_name">Group #%d</string>
    <string name="secret_voting_header_text">You are voting for %s</string>
    <string name="secret_voting_menu_next_vote">If you are the next to vote press the button below when you\'re ready</string>
    <string name="secret_voting_menu_next_vote_button">Vote</string>
    <string name="secret_voting_menu_end_voting">Once everyone has voted press the button below to see the results</string>
    <plurals name="secret_voting_menu_total_votes">
        <item quantity="one">%d person voted</item>
        <item quantity="other">%d people voted</item>
    </plurals>
    <string name="secret_voting_menu_end_voting_button">See Results</string>
    <string name="secret_voting_menu_abandon_voting_text">All votes will be lost, confirm your pin to abandon this voting:</string>
    <string name="secret_voting_menu_end_voting_text">Please confirm your pin before checking the results of this voting:</string>
    <string name="secret_voting_vote_confirm_title">Confirm your vote</string>
    <string name="secret_voting_vote_confirm_message">You have voted for: %s\n\nDo you confirm?</string>
    <string name="secret_voting_results_header_text">Results for %s voting</string>
    <string name="secret_voting_results_graph_text_percent">%d%%</string>
    <plurals name="secret_voting_results_graph_text_votes">
        <item quantity="one">%s vote</item>
        <item quantity="other">%s votes</item>
    </plurals>
    <string name="secret_voting_results_first_place">First place</string>
    <string name="secret_voting_results_second_place">Second place</string>
    <string name="secret_voting_results_third_place">Third place</string>
    <plurals name="secret_voting_results_tie">
        <item quantity="one">%1$s + %2$d other</item>
        <item quantity="other">%1$s + %2$d others</item>
    </plurals>
    <string name="secret_voting_pin_dialog_title">Enter pin</string>
    <string name="secret_voting_pin_enter_pin">Before letting anyone vote create a pin to make sure only you will be able to end the voting before sharing the results:</string>
    <string name="secret_voting_pin_confirm_pin">Please confirm the pin before seeing the results:</string>
    <string name="secret_voting_results_tie_break_title">Tie break</string>
    <string name="secret_voting_results_tie_break_hint">The following items were tied after the first voting, what do you want to do?</string>
    <string name="secret_voting_results_tie_break_vote_again">Vote again</string>
    <string name="secret_voting_results_tie_break_roulette">Roulette!</string>
    <string name="dialog_rate_header">If you\'re enjoying &appname; I would love to receive your review!</string>
    <string name="dialog_rate_feedback_positive">I\'m glad you\'re enjoying it! What about showing your love at the Play Store?</string>
    <string name="dialog_rate_play_store">Play Store</string>
    <string name="dialog_rate_feedback_negative">Would you mind sending me an e-mail suggesting what can I do to improve your experience with the app?</string>
    <string name="dialog_rate_send_email">Send e-mail</string>
</resources>