<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.activities.GroupActivity">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:orderInCategory="1"
        android:title="@string/group_action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_white"
        android:orderInCategory="2"
        android:title="@string/group_action_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_check_all"
        android:orderInCategory="3"
        android:title="@string/group_action_check_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_uncheck_all"
        android:orderInCategory="4"
        android:title="@string/group_action_uncheck_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="5"
        android:title="@string/group_action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="6"
        android:title="@string/group_action_delete"
        app:showAsAction="never" />
</menu>
