<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_regular">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/dialog_rate_header"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_regular"/>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_text"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/layout_feedback_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_bar"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/dialog_rate_feedback_positive"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_size_small"/>

        <Button
            android:id="@+id/button_play_store"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_rate_play_store"
            android:theme="@style/AboutButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_feedback_negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_bar"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/dialog_rate_feedback_negative"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_size_small"/>

        <Button
            android:id="@+id/button_email"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_rate_send_email"
            android:theme="@style/AboutButton"/>
    </LinearLayout>
</RelativeLayout>