<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".views.activities.SecretVotingActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="@dimen/clickable_area"
        android:layout_height="@dimen/clickable_area"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/hint_button_back"
        android:padding="@dimen/padding_small"
        android:src="@drawable/ic_arrow_back_white_24dp"
        android:text="@string/hint_button_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_large"
                android:text="@string/secret_voting_header_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_large"/>

            <TextView
                android:id="@+id/tv_hint_next_vote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_large"
                android:text="@string/secret_voting_menu_next_vote"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_regular"/>

            <Button
                android:id="@+id/button_next_vote"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/secret_voting_menu_next_vote_button"
                android:theme="@style/VotingButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/colorWhite"/>

            <TextView
                android:id="@+id/tv_hint_end_voting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/secret_voting_menu_end_voting"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_regular"/>

            <TextView
                android:id="@+id/tv_total_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_regular"/>

            <Button
                android:id="@+id/button_end_voting"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/secret_voting_menu_end_voting_button"
                android:theme="@style/VotingButton"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
