<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/padding_regular">

    <TextView
        android:id="@+id/tv_tie_break_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/secret_voting_results_tie_break_hint"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_regular"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_buttons"
        android:layout_below="@id/tv_tie_break_hint"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_vote_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/secret_voting_results_tie_break_vote_again"
            android:theme="@style/VotingButton"/>

        <Button
            android:id="@+id/button_roulette"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/secret_voting_results_tie_break_roulette"
            android:theme="@style/VotingButton"/>
    </LinearLayout>
</RelativeLayout>