<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.activities.GroupActivity">

    <include layout="@layout/toolbar_default"/>

    <View
        android:id="@+id/fake_tutorial_view_menu"
        android:layout_width="@dimen/clickable_area"
        android:layout_height="@dimen/clickable_area"
        android:layout_gravity="top|end"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:id="@+id/fake_tutorial_view_check_box"
            android:layout_width="@dimen/clickable_area"
            android:layout_height="@dimen/clickable_area"
            android:layout_gravity="center|start"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </RelativeLayout>

    <View
        android:id="@+id/fake_tutorial_view_fam"
        android:layout_width="@dimen/clickable_area"
        android:layout_height="@dimen/clickable_area"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/margin_tutorial"
        android:layout_marginEnd="@dimen/margin_tutorial"
        android:layout_marginRight="@dimen/margin_tutorial"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        app:layout_behavior=".presentation.ui.extensions.ClansFloatingActionBehavior"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccent"
        fab:menu_icon="@drawable/ic_play_arrow_white"
        fab:menu_labels_position="left"
        fab:menu_labels_style="@style/menu_labels_style">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_roulette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_roulette_white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/group_label_fab_roulette"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list_white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/group_label_fab_list"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_groups_white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/group_label_fab_groups"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_voting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rate_review_white_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/group_label_fab_voting"
            fab:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_combination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_merge_type_white_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/group_label_fab_combination"
            fab:fab_size="mini"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
